--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
 body{
     margin: 0;
 }
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    box-shadow: 0px 0px 5px black;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: 24px;
+    padding-right: 24px;
+    margin-bottom: 16px;
+}
