--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,17 @@ a{
     font-size: 24px;
     margin: 0;
 }
+.button-1{
+    color: blue;
+    border: 1px solid blue;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 12px;
+    padding-right: 12px;
+    background-color: white;
+    border-radius: 5px;
+}
+.button-1:hover{
+    background-color: blue;
+    color: white;
+}
