--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,9 @@ a{
     background-color: blue;
     color: white;
 }
+.big-container{
+    margin-left: 60px;
+    margin-right: 60px;
+    padding-left: 12px;
+    padding-right: 12px;
+}
