--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,12 @@ a{
     padding-left: 12px;
     padding-right: 12px;
 }
+main{
+    margin-left: 118px;
+    margin-right: 118px;
+    padding-right: 16px;
+    padding-left: 16px;
+    padding-top: 48px;
+    padding-bottom: 24px;
+    text-align: center;
+}
