--- a/styles.css
+++ b/styles.css
@@ -68,3 +68,9 @@ h1{
     margin-right: -12px;
     margin-bottom: 16px;
 }
+.div-1{
+    padding-left: 12px;
+    padding-right: 12px;
+    max-width: 100%;
+    width: 320px;
+}
