--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,12 @@ h1{
     border: 1px solid gray;
     box-shadow: 2px 2px 5px black;
 }
+.clo{
+    margin: 0;
+    font-size: 24px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+    background-color: rgba(0, 0, 0, 0.03);
+}
