--- a/styles.css
+++ b/styles.css
@@ -110,3 +110,13 @@ ul li{
     list-style-type: none;
     line-height: 24px;
 }
+.button-2{
+    color: blue;
+    border: 1px solid blue;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+    background-color: white;
+    border-radius: 5px;
+}
