.div-footer-1 img

--- a/styles.css
+++ b/styles.css
@@ -144,3 +144,8 @@ footer{
     padding-left: 12px;
     padding-right: 12px;
 }
+.div-footer-1 img{
+    width: 24px;
+    height: 19px;
+    margin-bottom: 8px;
+}
