--- a/styles.css
+++ b/styles.css
@@ -159,3 +159,8 @@ footer{
     font-size: 20px;
     font-weight: 500;
 }
+.div-footer-2 ul{
+    margin: 0;
+    list-style-type: none;
+    padding-left: 0;
+}
