--- a/styles.css
+++ b/styles.css
@@ -168,3 +168,27 @@ footer{
     color: gray;
     
 }
+@media(max-width:800px){
+    header{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-content: space-around;
+    }
+  }
+  @media(max-width:800px){
+    .leader{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-content: space-around;
+        max-width: 750px;
+    }
+  }
+  @media(max-width:800px){
+    .footer{
+        display: flex;
+        flex-wrap: wrap;
+        align-content: stretch;
+    }
+}    
